frontend/src/ANTLR/YAPLParser.ts
// Generated from ./YAPL.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { YAPLListener } from "./YAPLListener";

export class YAPLParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly CLASS = 9;
	public static readonly ELSE = 10;
	public static readonly FI = 11;
	public static readonly IF = 12;
	public static readonly IN = 13;
	public static readonly INHERITS = 14;
	public static readonly ISVOID = 15;
	public static readonly LOOP = 16;
	public static readonly POOL = 17;
	public static readonly THEN = 18;
	public static readonly WHILE = 19;
	public static readonly NEW = 20;
	public static readonly NOT = 21;
	public static readonly FALSE = 22;
	public static readonly TRUE = 23;
	public static readonly TYPE_ID = 24;
	public static readonly OBJECT_ID = 25;
	public static readonly SELF_TYPE = 26;
	public static readonly SELF = 27;
	public static readonly DOUBLE_QUOTE = 28;
	public static readonly STRING = 29;
	public static readonly LINE_COMMENT = 30;
	public static readonly BLOCK_COMMENT = 31;
	public static readonly INTEGER = 32;
	public static readonly PLUS_SIGN = 33;
	public static readonly MINUS_SIGN = 34;
	public static readonly NOT_SIGN = 35;
	public static readonly MULTIPLY_SIGN = 36;
	public static readonly DIVIDE_SIGN = 37;
	public static readonly LT_SIGN = 38;
	public static readonly LE_SIGN = 39;
	public static readonly EQUAL_SIGN = 40;
	public static readonly OPEN_PARENTHESIS = 41;
	public static readonly CLOSE_PARENTHESIS = 42;
	public static readonly OPEN_BRACKER = 43;
	public static readonly CLOSE_BRACKET = 44;
	public static readonly WS = 45;
	public static readonly RULE_prog = 0;
	public static readonly RULE_class_prod = 1;
	public static readonly RULE_id = 2;
	public static readonly RULE_feature = 3;
	public static readonly RULE_formal = 4;
	public static readonly RULE_expr = 5;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"prog", "class_prod", "id", "feature", "formal", "expr",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "';'", "','", "':'", "'<-'", "'@'", "'.'", "'let'", "'in'", 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "'SELF_TYPE'", "'self'", "'\"'", undefined, 
		undefined, undefined, undefined, "'+'", undefined, undefined, "'*'", "'/'", 
		"'<'", "'<='", "'='", "'('", "')'", "'{'", "'}'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, "CLASS", "ELSE", "FI", "IF", "IN", "INHERITS", "ISVOID", 
		"LOOP", "POOL", "THEN", "WHILE", "NEW", "NOT", "FALSE", "TRUE", "TYPE_ID", 
		"OBJECT_ID", "SELF_TYPE", "SELF", "DOUBLE_QUOTE", "STRING", "LINE_COMMENT", 
		"BLOCK_COMMENT", "INTEGER", "PLUS_SIGN", "MINUS_SIGN", "NOT_SIGN", "MULTIPLY_SIGN", 
		"DIVIDE_SIGN", "LT_SIGN", "LE_SIGN", "EQUAL_SIGN", "OPEN_PARENTHESIS", 
		"CLOSE_PARENTHESIS", "OPEN_BRACKER", "CLOSE_BRACKET", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(YAPLParser._LITERAL_NAMES, YAPLParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return YAPLParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "YAPL.g4"; }

	// @Override
	public get ruleNames(): string[] { return YAPLParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return YAPLParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(YAPLParser._ATN, this);
	}
	// @RuleVersion(0)
	public prog(): ProgContext {
		let _localctx: ProgContext = new ProgContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, YAPLParser.RULE_prog);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 13;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 12;
				this.class_prod();
				}
				}
				this.state = 15;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === YAPLParser.CLASS);
			this.state = 17;
			this.match(YAPLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public class_prod(): Class_prodContext {
		let _localctx: Class_prodContext = new Class_prodContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, YAPLParser.RULE_class_prod);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 19;
			this.match(YAPLParser.CLASS);
			this.state = 20;
			this.match(YAPLParser.TYPE_ID);
			this.state = 23;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === YAPLParser.INHERITS) {
				{
				this.state = 21;
				this.match(YAPLParser.INHERITS);
				this.state = 22;
				this.match(YAPLParser.TYPE_ID);
				}
			}

			this.state = 25;
			this.match(YAPLParser.OPEN_BRACKER);
			this.state = 31;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === YAPLParser.OBJECT_ID) {
				{
				{
				this.state = 26;
				this.feature();
				this.state = 27;
				this.match(YAPLParser.T__0);
				}
				}
				this.state = 33;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 34;
			this.match(YAPLParser.CLOSE_BRACKET);
			this.state = 35;
			this.match(YAPLParser.T__0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public id(): IdContext {
		let _localctx: IdContext = new IdContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, YAPLParser.RULE_id);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 37;
			this.match(YAPLParser.OBJECT_ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public feature(): FeatureContext {
		let _localctx: FeatureContext = new FeatureContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, YAPLParser.RULE_feature);
		let _la: number;
		try {
			this.state = 65;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				_localctx = new MethodFeatureContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 39;
				this.id();
				this.state = 40;
				this.match(YAPLParser.OPEN_PARENTHESIS);
				this.state = 49;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === YAPLParser.OBJECT_ID) {
					{
					this.state = 41;
					this.formal();
					this.state = 46;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === YAPLParser.T__1) {
						{
						{
						this.state = 42;
						this.match(YAPLParser.T__1);
						this.state = 43;
						this.formal();
						}
						}
						this.state = 48;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 51;
				this.match(YAPLParser.CLOSE_PARENTHESIS);
				this.state = 52;
				this.match(YAPLParser.T__2);
				this.state = 53;
				this.match(YAPLParser.TYPE_ID);
				this.state = 54;
				this.match(YAPLParser.OPEN_BRACKER);
				this.state = 55;
				this.expr(0);
				this.state = 56;
				this.match(YAPLParser.CLOSE_BRACKET);
				}
				break;

			case 2:
				_localctx = new AttributeFeatureContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 58;
				this.id();
				this.state = 59;
				this.match(YAPLParser.T__2);
				this.state = 60;
				this.match(YAPLParser.TYPE_ID);
				this.state = 63;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === YAPLParser.T__3) {
					{
					this.state = 61;
					this.match(YAPLParser.T__3);
					this.state = 62;
					this.expr(0);
					}
				}

				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public formal(): FormalContext {
		let _localctx: FormalContext = new FormalContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, YAPLParser.RULE_formal);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 67;
			this.id();
			this.state = 68;
			this.match(YAPLParser.T__2);
			this.state = 69;
			this.match(YAPLParser.TYPE_ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expr(): ExprContext;
	public expr(_p: number): ExprContext;
	// @RuleVersion(0)
	public expr(_p?: number): ExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExprContext = new ExprContext(this._ctx, _parentState);
		let _prevctx: ExprContext = _localctx;
		let _startState: number = 10;
		this.enterRecursionRule(_localctx, 10, YAPLParser.RULE_expr, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				{
				_localctx = new DeclarationContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 72;
				this.id();
				this.state = 73;
				this.match(YAPLParser.T__3);
				this.state = 74;
				this.expr(25);
				}
				break;

			case 2:
				{
				_localctx = new FunctionCallContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 76;
				this.id();
				this.state = 77;
				this.match(YAPLParser.OPEN_PARENTHESIS);
				this.state = 86;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << YAPLParser.T__6) | (1 << YAPLParser.IF) | (1 << YAPLParser.ISVOID) | (1 << YAPLParser.WHILE) | (1 << YAPLParser.NEW) | (1 << YAPLParser.NOT) | (1 << YAPLParser.FALSE) | (1 << YAPLParser.TRUE) | (1 << YAPLParser.OBJECT_ID) | (1 << YAPLParser.SELF) | (1 << YAPLParser.STRING))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (YAPLParser.INTEGER - 32)) | (1 << (YAPLParser.MINUS_SIGN - 32)) | (1 << (YAPLParser.NOT_SIGN - 32)) | (1 << (YAPLParser.OPEN_PARENTHESIS - 32)) | (1 << (YAPLParser.OPEN_BRACKER - 32)))) !== 0)) {
					{
					this.state = 78;
					this.expr(0);
					this.state = 83;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === YAPLParser.T__1) {
						{
						{
						this.state = 79;
						this.match(YAPLParser.T__1);
						this.state = 80;
						this.expr(0);
						}
						}
						this.state = 85;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 88;
				this.match(YAPLParser.CLOSE_PARENTHESIS);
				}
				break;

			case 3:
				{
				_localctx = new IfElseContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 90;
				this.match(YAPLParser.IF);
				this.state = 91;
				this.expr(0);
				this.state = 92;
				this.match(YAPLParser.THEN);
				this.state = 93;
				this.expr(0);
				this.state = 94;
				this.match(YAPLParser.ELSE);
				this.state = 95;
				this.expr(0);
				this.state = 96;
				this.match(YAPLParser.FI);
				}
				break;

			case 4:
				{
				_localctx = new WhileContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 98;
				this.match(YAPLParser.WHILE);
				this.state = 99;
				this.expr(0);
				this.state = 100;
				this.match(YAPLParser.LOOP);
				this.state = 101;
				this.expr(0);
				this.state = 102;
				this.match(YAPLParser.POOL);
				}
				break;

			case 5:
				{
				_localctx = new BracketsContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 104;
				this.match(YAPLParser.OPEN_BRACKER);
				this.state = 108;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 105;
					this.expr(0);
					this.state = 106;
					this.match(YAPLParser.T__0);
					}
					}
					this.state = 110;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << YAPLParser.T__6) | (1 << YAPLParser.IF) | (1 << YAPLParser.ISVOID) | (1 << YAPLParser.WHILE) | (1 << YAPLParser.NEW) | (1 << YAPLParser.NOT) | (1 << YAPLParser.FALSE) | (1 << YAPLParser.TRUE) | (1 << YAPLParser.OBJECT_ID) | (1 << YAPLParser.SELF) | (1 << YAPLParser.STRING))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (YAPLParser.INTEGER - 32)) | (1 << (YAPLParser.MINUS_SIGN - 32)) | (1 << (YAPLParser.NOT_SIGN - 32)) | (1 << (YAPLParser.OPEN_PARENTHESIS - 32)) | (1 << (YAPLParser.OPEN_BRACKER - 32)))) !== 0));
				this.state = 112;
				this.match(YAPLParser.CLOSE_BRACKET);
				}
				break;

			case 6:
				{
				_localctx = new LetContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 114;
				this.match(YAPLParser.T__6);
				this.state = 115;
				this.id();
				this.state = 116;
				this.match(YAPLParser.T__2);
				this.state = 117;
				this.match(YAPLParser.TYPE_ID);
				this.state = 120;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === YAPLParser.T__3) {
					{
					this.state = 118;
					this.match(YAPLParser.T__3);
					this.state = 119;
					this.expr(0);
					}
				}

				this.state = 132;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === YAPLParser.T__1) {
					{
					{
					this.state = 122;
					this.match(YAPLParser.T__1);
					this.state = 123;
					this.id();
					this.state = 124;
					this.match(YAPLParser.T__2);
					this.state = 125;
					this.match(YAPLParser.TYPE_ID);
					this.state = 128;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === YAPLParser.T__3) {
						{
						this.state = 126;
						this.match(YAPLParser.T__3);
						this.state = 127;
						this.expr(0);
						}
					}

					}
					}
					this.state = 134;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 135;
				this.match(YAPLParser.T__7);
				this.state = 136;
				this.expr(19);
				}
				break;

			case 7:
				{
				_localctx = new NewContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 138;
				this.match(YAPLParser.NEW);
				this.state = 139;
				this.match(YAPLParser.TYPE_ID);
				}
				break;

			case 8:
				{
				_localctx = new IsVoidContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 140;
				this.match(YAPLParser.ISVOID);
				this.state = 141;
				this.expr(17);
				}
				break;

			case 9:
				{
				_localctx = new NotOrMinusContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 142;
				_la = this._input.LA(1);
				if (!(_la === YAPLParser.MINUS_SIGN || _la === YAPLParser.NOT_SIGN)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 143;
				this.expr(12);
				}
				break;

			case 10:
				{
				_localctx = new NotContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 144;
				this.match(YAPLParser.NOT);
				this.state = 145;
				this.expr(8);
				}
				break;

			case 11:
				{
				_localctx = new ParenthesisContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 146;
				this.match(YAPLParser.OPEN_PARENTHESIS);
				this.state = 147;
				this.expr(0);
				this.state = 148;
				this.match(YAPLParser.CLOSE_PARENTHESIS);
				}
				break;

			case 12:
				{
				_localctx = new IdentifierContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 150;
				this.id();
				}
				break;

			case 13:
				{
				_localctx = new IntContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 151;
				this.match(YAPLParser.INTEGER);
				}
				break;

			case 14:
				{
				_localctx = new StringContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 152;
				this.match(YAPLParser.STRING);
				}
				break;

			case 15:
				{
				_localctx = new TrueContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 153;
				this.match(YAPLParser.TRUE);
				}
				break;

			case 16:
				{
				_localctx = new FalseContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 154;
				this.match(YAPLParser.FALSE);
				}
				break;

			case 17:
				{
				_localctx = new SelfContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 155;
				this.match(YAPLParser.SELF);
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 202;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 19, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 200;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 18, this._ctx) ) {
					case 1:
						{
						_localctx = new AddContext(new ExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, YAPLParser.RULE_expr);
						this.state = 158;
						if (!(this.precpred(this._ctx, 16))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 16)");
						}
						this.state = 159;
						this.match(YAPLParser.PLUS_SIGN);
						this.state = 160;
						this.expr(17);
						}
						break;

					case 2:
						{
						_localctx = new SubstractContext(new ExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, YAPLParser.RULE_expr);
						this.state = 161;
						if (!(this.precpred(this._ctx, 15))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 15)");
						}
						this.state = 162;
						this.match(YAPLParser.MINUS_SIGN);
						this.state = 163;
						this.expr(16);
						}
						break;

					case 3:
						{
						_localctx = new MultiplyContext(new ExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, YAPLParser.RULE_expr);
						this.state = 164;
						if (!(this.precpred(this._ctx, 14))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 14)");
						}
						this.state = 165;
						this.match(YAPLParser.MULTIPLY_SIGN);
						this.state = 166;
						this.expr(15);
						}
						break;

					case 4:
						{
						_localctx = new DivideContext(new ExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, YAPLParser.RULE_expr);
						this.state = 167;
						if (!(this.precpred(this._ctx, 13))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 13)");
						}
						this.state = 168;
						this.match(YAPLParser.DIVIDE_SIGN);
						this.state = 169;
						this.expr(14);
						}
						break;

					case 5:
						{
						_localctx = new LessThanContext(new ExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, YAPLParser.RULE_expr);
						this.state = 170;
						if (!(this.precpred(this._ctx, 11))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 11)");
						}
						this.state = 171;
						this.match(YAPLParser.LT_SIGN);
						this.state = 172;
						this.expr(12);
						}
						break;

					case 6:
						{
						_localctx = new LessEqualThanContext(new ExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, YAPLParser.RULE_expr);
						this.state = 173;
						if (!(this.precpred(this._ctx, 10))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 10)");
						}
						this.state = 174;
						this.match(YAPLParser.LE_SIGN);
						this.state = 175;
						this.expr(11);
						}
						break;

					case 7:
						{
						_localctx = new EqualContext(new ExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, YAPLParser.RULE_expr);
						this.state = 176;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 177;
						this.match(YAPLParser.EQUAL_SIGN);
						this.state = 178;
						this.expr(10);
						}
						break;

					case 8:
						{
						_localctx = new FunctionCallBuggyContext(new ExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, YAPLParser.RULE_expr);
						this.state = 179;
						if (!(this.precpred(this._ctx, 24))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 24)");
						}
						this.state = 182;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === YAPLParser.T__4) {
							{
							this.state = 180;
							this.match(YAPLParser.T__4);
							this.state = 181;
							this.match(YAPLParser.TYPE_ID);
							}
						}

						this.state = 184;
						this.match(YAPLParser.T__5);
						this.state = 185;
						this.id();
						this.state = 198;
						this._errHandler.sync(this);
						switch ( this.interpreter.adaptivePredict(this._input, 17, this._ctx) ) {
						case 1:
							{
							this.state = 186;
							this.match(YAPLParser.OPEN_PARENTHESIS);
							this.state = 195;
							this._errHandler.sync(this);
							_la = this._input.LA(1);
							if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << YAPLParser.T__6) | (1 << YAPLParser.IF) | (1 << YAPLParser.ISVOID) | (1 << YAPLParser.WHILE) | (1 << YAPLParser.NEW) | (1 << YAPLParser.NOT) | (1 << YAPLParser.FALSE) | (1 << YAPLParser.TRUE) | (1 << YAPLParser.OBJECT_ID) | (1 << YAPLParser.SELF) | (1 << YAPLParser.STRING))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (YAPLParser.INTEGER - 32)) | (1 << (YAPLParser.MINUS_SIGN - 32)) | (1 << (YAPLParser.NOT_SIGN - 32)) | (1 << (YAPLParser.OPEN_PARENTHESIS - 32)) | (1 << (YAPLParser.OPEN_BRACKER - 32)))) !== 0)) {
								{
								this.state = 187;
								this.expr(0);
								this.state = 192;
								this._errHandler.sync(this);
								_la = this._input.LA(1);
								while (_la === YAPLParser.T__1) {
									{
									{
									this.state = 188;
									this.match(YAPLParser.T__1);
									this.state = 189;
									this.expr(0);
									}
									}
									this.state = 194;
									this._errHandler.sync(this);
									_la = this._input.LA(1);
								}
								}
							}

							this.state = 197;
							this.match(YAPLParser.CLOSE_PARENTHESIS);
							}
							break;
						}
						}
						break;
					}
					}
				}
				this.state = 204;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 19, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public sempred(_localctx: RuleContext, ruleIndex: number, predIndex: number): boolean {
		switch (ruleIndex) {
		case 5:
			return this.expr_sempred(_localctx as ExprContext, predIndex);
		}
		return true;
	}
	private expr_sempred(_localctx: ExprContext, predIndex: number): boolean {
		switch (predIndex) {
		case 0:
			return this.precpred(this._ctx, 16);

		case 1:
			return this.precpred(this._ctx, 15);

		case 2:
			return this.precpred(this._ctx, 14);

		case 3:
			return this.precpred(this._ctx, 13);

		case 4:
			return this.precpred(this._ctx, 11);

		case 5:
			return this.precpred(this._ctx, 10);

		case 6:
			return this.precpred(this._ctx, 9);

		case 7:
			return this.precpred(this._ctx, 24);
		}
		return true;
	}
